<resources>
    <string name="app_name">DodecaControl</string>
    <string name="messages">Messages:</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="paired_devices">Paired devices:</string>
    <string name="no_messages">No messages sent!</string>
    <string name="no_bluetooth">Bluetooth not available.</string>
    <string name="device_name_format">Device: %1$s</string>
    <string name="status_connecting">Status: Connecting</string>
    <string name="status_connected">Status: Connected</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_failed">Connection Failed.</string>
    <string name="bluetooth_unavailable">Connection Failed.</string>
    <string name="message_send_error">Error sending message!</string>
    <string name="you_sent">You</string>
    <string name="action_a">Action A</string>
    <string name="action_b">Action B</string>
    <string name="action_c">Action C</string>
    <string name="darken">Darken</string>
    <string name="brighten">Brighten</string>
    <string name="title_activity_manual_mode">Manual Mode!</string>
    <!-- Strings used for fragments for navigation -->

    <string name="strip">Strip</string>
    <string name="index">Index</string>
    <string name="go">Go!</string>
    <string name="goto_manual_mode">goto manual mode</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="enter_strip_index">Enter Strip Index</string>
    <string name="enter_led_index">Enter LED index</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
</resources>
